feat: 添加 footer 图标

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,10 @@ import ResumeContainer from '../components/ResumeContainer.tsx'
 </Layout>
 
 <style>
+  img {
+    box-sizing: border-box;
+  }
+
   #container {
     width: 740px;
   }
