--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ResumeContainer from '../components/ResumeContainer.tsx'
     id="container"
     class="my-0 mx-auto grid min-h-screen justify-items-center px-12 py-6 bg-gray-100"
   >
-    <ResumeContainer />
+    <ResumeContainer client:idle />
   </div>
 </Layout>
 
