update: rename tab title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import ResumeContainer from '../components/ResumeContainer.tsx'
 ---
 
-<Layout title="index page">
+<Layout title="ffxixslh's resume">
   <div
     id="container"
     class="my-0 mx-auto grid min-h-screen justify-items-center px-12 py-6 bg-gray-100"
