--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import ResumeContainer from '../components/ResumeContainer.tsx'
+import ResumeContainer from '../components/ResumeContainer.js'
 ---
 
 <Layout title="ffxixslh's resume">
